--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             </div>
             <input type="button" class="push" value="Press Here" onclick="pushSkillGen()">
             <div class="push__but" id="push_content">
-                <h1>• WORKOUTS, WORKOUTS, AND MORE WORKOUTS! •  </h1>
+                <h1 class = "workout__descrip">• WORKOUTS, WORKOUTS, AND MORE WORKOUTS! •  </h1>
             </div>
         </div>
     </div>
